--- a/doc/makefile_notes.txt
+++ b/doc/makefile_notes.txt
@@ -816,7 +816,7 @@ file and the source file in each case where the rule applies
 
 11.3 Dangers When Using Archives
 
-ARFLAGS := rv
+ARFLAGS := rsD
 (%) : % ;
 %.a :
   rm -f $@
@@ -826,16 +826,16 @@ libfoo.a: libfoo.a(x.o y.o …)
 # keep .o files even for the first time with archive(member) syntax
 .SECONDARY: # $(patsubst %.c,%.o,$(wildcard *.c))
 
-# 1. do not use U in ARFLAGS ;
+# 1. use D option in ARFLAGS, do not use U in ARFLAGS ;
 # 2. add rm -f $@ befoe $(AR) ;
 # 3. use $^ instead of $? ;
 #
-# without U, the archive timestamp is zero and considered outdated every time,
+# with D, the archive timestamp is zero and considered outdated every time,
 # so ar gets the chance to rebuild every time, even when source files or object
 # files are added, removed or changed.
 # so no make clean or the touch command is required manually.
 #
-# without U, $? is same as $^, because archive timestamp is zero and considered
+# with D, $? is same as $^, because archive timestamp is zero and considered
 # outdated. all prerequisites are new. but use $^ always.
 #
 
